# django-test

./: manage.py  pyproject.toml
apps/certificates/: apps.py  models.py
apps/certificates/migrations/: 0001_initial.py
apps/people/: apps.py  models.py
apps/people/migrations/: 0001_initial.py
apps/subscriptions/: apps.py  models.py
apps/subscriptions/migrations/: 0001_initial.py
mysite/: settings.py
