[project]
name = "mysite"
dynamic = ["version"]
dependencies = ["django>=6.0.3"]

[tool.setuptools]
py-modules = []

[dependency-groups]
dev = [
    "django-types>=0.23.0",
    "pylint-django>=2.7.0",
    "ruff>=0.15.8",
]

[tool.ruff]
include = ["pyproject.toml", "apps/**/*.py", "mysite/**/*.py"]

[tool.ruff.lint]
select = ["DJ", "S", "B"]
